<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY end_test_warning1 "\n\nIF YOU SELECT \u0022END TEST\u0022, ALL DATA COLLECTED FROM THIS TEST AND PATIENT INFORMATION
    WILL BE LOST."><!ENTITY end_test_warning2 "\n\nIF YOU SELECT \u0022YES\u0022, ALL DATA COLLECTED FROM THIS TEST AND PATIENT INFORMATION
    WILL BE LOST.">]>

<resources>
    <string name="app_name">Indicor Navigator 2</string>
    <!-- Training Activity -->
    <string name="pressure">Pressure</string>
    <string name="timer">Timer</string>

    <!-- Main Screen -->
    <string name="starttest">Start New Test</string>
    <string name="settings">Settings</string>
    <string name="manual">Manual</string>
    <string name="training">Training Video</string>
    <string name="co_name">Vixiar Medical Inc.</string>
    <string name="tag_line">LVEDP Estimation Diagnostic Test</string>
    <string name="main_screen_title">Indicor Navigator </string>
    <string name="vixiar_web">www.vixiar.com</string>
    <string name="password_prompt">Enter Password to Continue:</string>

    <!-- PI Screen -->
    <string name="pat_info_screen_title">Patient Information</string>
    <string name="complete_data_entry">Complete Patient Data Entry</string>
    <string name="continue_practice_or_test">Practice or continue to test</string>
    <string name="setting_label_pi">Patient ID</string>
    <string name="setting_label_age">Age</string>
    <string name="setting_label_height">Height</string>
    <string name="setting_label_weight">Weight</string>
    <string name="setting_label_syst">Systolic Pressure</string>
    <string name="setting_label_diast">Diastolic Pressure</string>
    <string name="setting_label_gender">Gender</string>
    <string name="setting_label_notes">Notes</string>
    <string name="setting_ft">ft./in.</string>
    <string name="setting_lbs">lbs.</string>
    <string name="setting_mmhg">mmHg</string>

    <string name="close">Close</string>

    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="practice_screen_title">Practice</string>
    <string name="keep_ball">Keep ball in target zone</string>

    <string name="measurement">Measurement </string>
    <string name="keep_arm_steady">Keep arm steady</string>

    <string name="capturing_baseline">Capturing baseline...</string>
    <string name="pulse_amplitude">PULSE AMPLITUDE</string>
    <string name="time">TIME</string>
    <string name="time_remaining">Time Remaining</string>

    <string name="cancel">Cancel</string>
    <string name="test_will_begin">Test will begin in </string>

    <string name="loading_results">Loading Results...</string>
    <string name="processing">Processing...please remain still until complete</string>
    <string name="exhale">Exhale. Hold constant pressure.</string>
    <string name="measurement1">Measurement 1</string>
    <string name="measurement2">Measurement 2</string>
    <string name="measurement3">Measurement 3</string>
    <string name="average">Average</string>
    <string name="LVEDP">LVEDP</string>
    <string name="rest_period">Rest Period</string>
    <string name="test_complete">Test complete</string>
    <string name="test_will_resume">Test will resume in </string>
    <string name="results">Results</string>
    <string name="pleaserest">Please rest</string>
    <string name="rest">Rest</string>
    <string name="end_test">End Test</string>

    <!-- Messages -->
    <string name="dlg_title_ble_not_supported">BLE NOT SUPPORTED</string>
    <string name="dlg_msg_ble_not_supported">This device does not support Bluetooth Low Energy (BLE)
        which is required to communicate to the handheld.</string>

    <string name="dlg_title_ble_enable_pre">BLE MUST BE ENABLED</string>
    <string name="dlg_msg_ble_enable_pre">The next screen will allow you to enable Bluetooth
        Low Energy (BLE).  Please enable BLE so this app can communicate
        with handheld devices.</string>

    <string name="dlg_title_ble_not_enabled">BLE MUST BE ENABLED</string>
    <string name="dlg_msg_ble_not_enabled">Bluetooth Low Energy (BLE) must be enabled.
        BLE is required to communicate with the Vixiar handheld device.</string>

    <string name="dlg_title_location_service">LOCATION ACCESS</string>
    <string name="dlg_msg_location_service">Android must have location services
        enabled in order to connect to the Vixiar handheld device. This is a requirement
        from Google for any app connecting to a Bluetooth Low Energy (BLE) device. To enable
        location services, open your devices settings app, scroll to location and tap.  Then turn on
        location services.
        Restart this app once location services are enabled.</string>

    <string name="dlg_title_location_access_pre">LOCATION ACCESS REQUIRED</string>
    <string name="dlg_msg_location_access_pre">The next screen will allow you to grant location
        access to this app.  Please grant location access so this app can communicate
        with handheld devices.</string>

    <string name="dlg_title_location_access_no">LOCATION ACCESS REQUIRED</string>
    <string name="dlg_msg_location_access_no">Since location access has not been granted, this app
        will not be able to communicate with handheld devices.</string>

    <string name="dlg_title_authentication_error">PAIRING ISSUE</string>
    <string name="dlg_msg_authentication_error">A handheld device was detected, however it is
        not paired with this tablet. It may show as paired in the Android settings, but could have since
        been paired with a different tablet. See Instructions for Use for instructions on how to
        pair the handheld with this device.</string>

    <string name="dlg_title_no_paired_devices">NO PAIRED DEVICES</string>
    <string name="dlg_msg_no_paired_devices">A handheld device was detected, however it is
        not paired with this tablet. See Instructions for Use for instructions on how to
        pair the handheld with this device.</string>

    <string name="dlg_title_no_handhelds">NO HANDHELD FOUND</string>
    <string name="dlg_msg_no_handhelds">No Indicor handhelds were detected.  Please make sure
        the Indicor handheld is powered on and the blue LED is flashing. &end_test_warning1; </string>

    <string name="dlg_title_pressure_error_start">ERROR</string>
    <string name="dlg_msg_pressure_error_start">You have 5 seconds from when the test starts
        to hold the pressure in the testing range.</string>

    <string name="dlg_title_pressure_error_running">ERROR</string>
    <string name="dlg_msg_pressure_error_running">You must maintain the pressure within the testing
        range until the test is complete.</string>

    <string name="dlg_title_cancel_test">CANCEL TEST?</string>
    <string name="dlg_msg_cancel_test">Do you want to cancel this test? &end_test_warning2;</string>

    <string name="dlg_title_hr_out_of_range">HEART RATE OUT OF RANGE</string>
    <string name="dlg_msg_hr_out_of_range">Heart rate out of range.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_ambient_light">AMBIENT LIGHT DETECTED</string>
    <string name="dlg_msg_ambient_light">It appears that the sensor is being exposed to a significant amount of ambient light.  Please cover the sensor or move to a different location.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_baseline_unstable">BASELINE NOT STABLE</string>
    <string name="dlg_msg_baseline_unstable">The baseline PPG signal is not stable enough to proceed. Make sure you are breathing normally during the baseline period.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_ppg_flatline">PULSE NOT DETECTED</string>
    <string name="dlg_msg_ppg_flatline">Not detecting a pulse signal.  Ensure the sensor is completely on and has good contact with the finger.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_movement_detected">MOVEMENT DETECTED</string>
    <string name="dlg_msg_movement_detected">Detecting movement and/or pressure on the sensor.  Ensure the patient is still with the finger sensor hanging free.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_ppg_hf_noise">MOVEMENT DETECTED</string>
    <string name="dlg_msg_ppg_hf_noise">Detecting signal interference.  Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_ppg_weak_pulse">WEAK PULSE</string>
    <string name="dlg_msg_ppg_weak_pulse">Detecting a weak pulse signal. Do you wish to try again? &end_test_warning1;</string>

    <string name="dlg_title_connection_problem">PROBLEM CONNECTING</string>
    <string name="dlg_msg_connection_problem">There was a problem connecting to the handheld device.
        Try restarting it and connecting again.</string>

    <string name="dlg_title_storage_access_pre">STORAGE ACCESS REQUIRED</string>
    <string name="dlg_msg_storage_access_pre">The next screen will allow you to enable writing to
        files.  Please enable "Storage" so this app can save data files.</string>

    <string name="dlg_title_storage_access_no">STORAGE ACCESS REQUIRED</string>
    <string name="dlg_msg_storage_access_no">Since storage access has not been granted, this app
        will not be able to communicate with handheld devices.</string>

    <string name="dlg_title_handheld_timeout">LOST CONNECTION</string>
    <string name="dlg_msg_handheld_timeout">It appears that the connection to the handheld device
        has been lost.  Make sure the power remains on and the device stays within range of the
        tablet. &end_test_warning1; </string>

    <string name="dlg_title_sequence_error">COMMUNICATIONS ERROR</string>
    <string name="dlg_msg_sequence_error">There was an error in the data received from the handheld.
        The sequence numbers were not correct.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dlg_title_low_battery">LOW BATTERY</string>
    <string name="dlg_msg_low_battery">The battery level is very low on the handheld device.  Please charge the handheld device and then restart this test.</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_study_location">Study location</string>
    <string-array name="pref_study_location_list_titles">
        <item>Stony Brook Training Set</item>
        <item>Stony Brook Validation Study</item>
        <item>JHU Diuresis Study</item>
        <item>JHU Nephrology Study</item>
        <item>Vixiar Testing</item>
    </string-array>

    <string-array name="pref_study_location_list_values">
        <item>Stony_Brook-Training</item>
        <item>Stony_Brook-Validation</item>
        <item>JHU-Diuresis</item>
        <item>JHU-Nephrology</item>
        <item>Vixiar_Internal-Testing</item>
    </string-array>
    <string name="title_activity_pdfview">PDFViewActivity</string>

</resources>
