<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="bottom"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorTopBar"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="fonts/Roboto-Light.ttf"
            android:paddingStart="10dp"
            android:textSize="@dimen/main_screen_label_size"/>

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/exit_app"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_pi"
                android:textSize="@dimen/main_screen_label_size"/>

            <EditText
                android:id="@+id/txtPatientID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@null"
                android:elevation="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBottomBar"
                android:textSize="@dimen/patient_entry_font_size"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_dob"
                android:textSize="@dimen/main_screen_label_size"/>

            <NumberPicker
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"></NumberPicker>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_height"
                android:textSize="@dimen/main_screen_label_size"/>

            <EditText
                android:id="@+id/txtHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:elevation="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBottomBar"
                android:textSize="@dimen/patient_entry_font_size"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_ft"
                android:textSize="@dimen/main_screen_label_size"/><![CDATA[

            />

        ]]>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_weight"
                android:textSize="@dimen/main_screen_label_size"/>

            <EditText
                android:id="@+id/txteight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:elevation="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBottomBar"
                android:textSize="@dimen/patient_entry_font_size"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_lbs"
                android:textSize="@dimen/main_screen_label_size"/>
            />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_syst"
                android:textSize="@dimen/main_screen_label_size"/>

            <EditText
                android:id="@+id/txtSystolic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:elevation="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBottomBar"
                android:textSize="@dimen/patient_entry_font_size"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_mmhg"
                android:textSize="@dimen/main_screen_label_size"/>
            />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_diast"
                android:textSize="@dimen/main_screen_label_size"/>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:elevation="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorBottomBar"
                android:textSize="@dimen/patient_entry_font_size"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_mmhg"
                android:textSize="@dimen/main_screen_label_size"/>
            />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="6dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:paddingStart="10dp"
                android:text="@string/setting_label_notes"
                android:textSize="@dimen/main_screen_label_size"/>
            />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/main_screen_vertical_spacing"
            android:paddingTop="@dimen/main_screen_vertical_spacing"
            android:src="@drawable/divider_line"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorBottomBar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="5"
            android:fontFamily="fonts/Roboto-Light.ttf"
            android:gravity="center_horizontal"
            android:text="@string/connect_dev"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/bottom_bar_font_size"/>

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".5"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/training_button"/>

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".5"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/next_button"/>

    </LinearLayout>

</android.widget.LinearLayout>
